force-app/main/default/objects/Study_Voucher__c/Study_Voucher__c.object-meta.xml
<CustomObject>
    <description>The vouchers that can be applied on transaction orders as discount.</description>
    <label>Study Voucher</label>
    <nameField>
        <label>Study Voucher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>