force-app/main/default/objects/Study_Voucher__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The educational institution, administrative account or business account that owns the voucher.</description>
    <inlineHelpText>The educational institution, administrative account or business account that owns the voucher.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Vouchers</relationshipLabel>
    <relationshipName>Study_Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>