force-app/main/default/objects/Study_Voucher__c/fields/Accounting_System_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_System_Account_Code__c</fullName>
    <description>Track the account code used in the external accounting system.</description>
    <inlineHelpText>Track the account code used in the external accounting system.</inlineHelpText>
    <label>Accounting System - Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>