force-app/main/default/objects/Study_Voucher__c/fields/Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied__c</fullName>
    <description>The total amount has been applied as a discount to the study voucher.</description>
    <label>Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>