force-app/main/default/objects/Study_Voucher__c/fields/Amount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Limit__c</fullName>
    <description>The maximum amount that the voucher can be used for.</description>
    <inlineHelpText>The maximum amount that the voucher can be used for.</inlineHelpText>
    <label>Amount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>