force-app/main/default/objects/Study_Voucher__c/fields/Applicable_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Item_Type__c</fullName>
    <description>The item types that are eligible to be discounted by the voucher.</description>
    <inlineHelpText>The item types that are eligible to be discounted by the voucher.</inlineHelpText>
    <label>Applicable Item Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Item_Type</valueSetName>
    </valueSet>
</CustomField>