force-app/main/default/objects/Study_Voucher__c/fields/Apply_As__c.field-meta.xml
<CustomField>
    <fullName>Apply_As__c</fullName>
    <description>This is used to determine if the discounted value is stored on the order line item record or as a separate line item that links to the order line item as offset.</description>
    <inlineHelpText>This is used to determine if the discounted value is stored on the order line item record or as a separate line item that links to the order line item as offset.</inlineHelpText>
    <label>Apply As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Line Discount</fullName>
                <default>true</default>
                <label>Order Line Discount</label>
            </value>
            <value>
                <fullName>Order Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>