force-app/main/default/objects/Study_Voucher__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Voucher code.</description>
    <inlineHelpText>Voucher code.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>