force-app/main/default/objects/Study_Voucher__c/fields/Line_Item_Processing_Priority__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Processing_Priority__c</fullName>
    <description>Reserved for future. This is used to determine behavior of applying voucher on the order line items e.g., apply based on lowest to highest price line item.</description>
    <inlineHelpText>Reserved for future. This is used to determine behavior of applying voucher on the order line items e.g., apply based on lowest to highest price line item.</inlineHelpText>
    <label>(Reserved) Line Item Processing Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest Price First</fullName>
                <default>true</default>
                <label>Lowest Price First</label>
            </value>
            <value>
                <fullName>Highest Price First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>