force-app/main/default/objects/Study_Voucher__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Indicates the sequence of a voucher that will be allocated to transaction order.</description>
    <inlineHelpText>Indicates the sequence of a voucher that will be allocated to transaction order.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>