force-app/main/default/objects/Study_Voucher__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <description>The total number of usage for the voucher.</description>
    <inlineHelpText>The total number of usage for the voucher.</inlineHelpText>
    <label>Usage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>