force-app/main/default/objects/Study_Voucher__c/fields/Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Usage_Limit__c</fullName>
    <description>The limit of the voucher can be used.</description>
    <inlineHelpText>The limit of the voucher can be used.</inlineHelpText>
    <label>Usage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>