force-app/main/default/objects/Study_Voucher__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The validity period for the voucher.</description>
    <inlineHelpText>The validity period for the voucher.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>