force-app/main/default/objects/Study_Voucher__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>The validity period for the voucher.</description>
    <inlineHelpText>The validity period for the voucher.</inlineHelpText>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>