force-app/main/default/objects/Study_Voucher__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
                <isActive>false</isActive>
                <label>Quantity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>