force-app/main/default/objects/Study_Voucher__c/fields/Voucher_Value__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Value__c</fullName>
    <description>Represents the value depending on the types: Amount, Percentage or Quantity.</description>
    <inlineHelpText>Represents the value depending on the types: Amount, Percentage or Quantity.</inlineHelpText>
    <label>Voucher Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>