force-app/main/default/objects/Study_Voucher__c/validationRules/Validate_Amount_Applied.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Amount_Applied</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Amount_Applied__c)),
NOT(ISBLANK(Amount_Limit__c)),
Amount_Applied__c &gt; Amount_Limit__c 
)</errorConditionFormula>
    <errorDisplayField>Amount_Applied__c</errorDisplayField>
    <errorMessage>The study voucher has exceeded its amount limit.</errorMessage>
</ValidationRule>