force-app/main/default/objects/Study_Voucher__c/validationRules/Validate_Usage_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Usage_Count</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Usage_Count__c)),
    NOT(ISBLANK(Usage_Limit__c)),
    Usage_Count__c &gt; Usage_Limit__c
)</errorConditionFormula>
    <errorDisplayField>Usage_Count__c</errorDisplayField>
    <errorMessage>The study voucher has exceeded its usage limit.</errorMessage>
</ValidationRule>