force-app/main/default/objects/Study_Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Status__c</columns>
    <columns>Voucher_Type__c</columns>
    <columns>Voucher_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>